<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddExerciseActivity">

    <TextView
        android:id="@+id/add_exercise_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_an_exercise"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_exercise_recycler_view"
        android:clickable="true"
        android:focusable="true"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|bottom">

            <EditText
                android:id="@+id/add_other_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/add_other_exercise"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                android:inputType="text|textAutoCorrect"
                android:imeOptions="actionDone"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/send_exercise_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="0"
                android:onClick="sendExerciseOnClick"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginEnd="8dp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>